--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <title>Document</title>
+    <link rel="icon" type="image/png" href="img/favicon.ico" />
 </head>
 <body>
     <div id="root"></div>
