--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <title>Document</title>
+    <title>Markdown Previewer</title>
     <link rel="icon" type="image/png" href="img/favicon.ico" />
 </head>
 <body>
